Docs examples dark mode tweaks

--- a/src/pages/docs/backdrop-grayscale.mdx
+++ b/src/pages/docs/backdrop-grayscale.mdx
@@ -28,7 +28,7 @@ Use the `backdrop-grayscale` and `backdrop-grayscale-0` utilities to control whe
   <div class="flex justify-start sm:block overflow-scroll sm:overflow-visible scroll-p-8">
   <div class="flex items-center justify-around gap-6 sm:gap-4 font-mono font-bold shrink-0 p-8">
     <div class="flex flex-col items-center shrink-0">
-      <p class="font-medium text-sm text-gray-500 font-mono text-center mb-3">backdrop-grayscale-0</p>
+      <p class="font-medium text-sm text-gray-500 font-mono text-center mb-3 dark:text-gray-400">backdrop-grayscale-0</p>
       <div class="relative">
         <div class="absolute inset-6 backdrop-grayscale-0 h-20 w-20 bg-white/30"></div>
         <img class="w-32 h-32 object-cover rounded-lg shadow-xl" src="https://images.unsplash.com/photo-1554629947-334ff61d85dc?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=320&h=320&q=80" />
@@ -36,7 +36,7 @@ Use the `backdrop-grayscale` and `backdrop-grayscale-0` utilities to control whe
       </div>
     </div>
     <div class="flex flex-col items-center shrink-0">
-      <p class="font-medium text-sm text-gray-500 font-mono text-center mb-3">backdrop-grayscale</p>
+      <p class="font-medium text-sm text-gray-500 font-mono text-center mb-3 dark:text-gray-400">backdrop-grayscale</p>
       <div class="relative">
         <div class="absolute inset-6 backdrop-grayscale h-20 w-20 bg-white/30"></div>
         <img class="w-32 h-32 object-cover rounded-lg shadow-xl" src="https://images.unsplash.com/photo-1554629947-334ff61d85dc?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=320&h=320&q=80" />
