--- a/src/pages/docs/blur.mdx
+++ b/src/pages/docs/blur.mdx
@@ -29,28 +29,28 @@ Use the `blur-{amount?}` utilities to blur an element.
   <div class="flex sm:block overflow-scroll sm:overflow-visible scroll-p-8">
     <div class="flex items-center justify-around gap-12 sm:gap-4 font-mono font-bold shrink-0 p-8">
       <div class="flex flex-col items-center shrink-0">
-        <p class="font-medium text-sm text-gray-500 font-mono text-center mb-3">blur-none</p>
+        <p class="font-medium text-sm text-gray-500 font-mono text-center mb-3 dark:text-gray-400">blur-none</p>
         <div class="relative blur-none">
           <img class="w-24 h-24 object-cover rounded-lg shadow-xl" src="https://images.unsplash.com/photo-1554629947-334ff61d85dc?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=320&h=320&q=80" />
           <div class="absolute inset-0 ring-1 ring-inset ring-black/10 rounded-lg"></div>
         </div>
       </div>
       <div class="flex flex-col items-center shrink-0">
-        <p class="font-medium text-sm text-gray-500 font-mono text-center mb-3">blur-sm</p>
+        <p class="font-medium text-sm text-gray-500 font-mono text-center mb-3 dark:text-gray-400">blur-sm</p>
         <div class="relative blur-sm">
           <img class="w-24 h-24 object-cover rounded-lg shadow-xl" src="https://images.unsplash.com/photo-1554629947-334ff61d85dc?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=320&h=320&q=80" />
           <div class="absolute inset-0 ring-1 ring-inset ring-black/10 rounded-lg"></div>
         </div>
       </div>
       <div class="flex flex-col items-center shrink-0">
-        <p class="font-medium text-sm text-gray-500 font-mono text-center mb-3">blur-lg</p>
+        <p class="font-medium text-sm text-gray-500 font-mono text-center mb-3 dark:text-gray-400">blur-lg</p>
         <div class="relative blur-lg">
           <img class="w-24 h-24 object-cover rounded-lg shadow-xl" src="https://images.unsplash.com/photo-1554629947-334ff61d85dc?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=320&h=320&q=80" />
           <div class="absolute inset-0 ring-1 ring-inset ring-black/10 rounded-lg"></div>
         </div>
       </div>
       <div class="flex flex-col items-center shrink-0">
-        <p class="font-medium text-sm text-gray-500 font-mono text-center mb-3">blur-2xl</p>
+        <p class="font-medium text-sm text-gray-500 font-mono text-center mb-3 dark:text-gray-400">blur-2xl</p>
         <div class="relative blur-2xl">
           <img class="w-24 h-24 object-cover rounded-lg shadow-xl" src="https://images.unsplash.com/photo-1554629947-334ff61d85dc?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=320&h=320&q=80" />
           <div class="absolute inset-0 ring-1 ring-inset ring-black/10 rounded-lg"></div>
