--- a/src/pages/docs/box-decoration-break.mdx
+++ b/src/pages/docs/box-decoration-break.mdx
@@ -23,7 +23,7 @@ Use the `box-decoration-slice` and `box-decoration-clone` utilities to control w
 <Example>
   <div class="grid grid-cols-1 sm:grid-cols-2 gap-10 px-10 font-mono font-bold">
     <div class="flex flex-col">
-      <p class="font-medium text-sm text-gray-500 font-mono mb-3">box-decoration-slice</p>
+      <p class="font-medium text-sm text-gray-500 font-mono mb-3 dark:text-gray-400">box-decoration-slice</p>
       <div class="text-5xl font-extrabold leading-none tracking-tight font-sans">
         <span class="box-decoration-slice text-white bg-gradient-to-r from-indigo-600 to-pink-500 leading-[3.5rem] px-2">
           Hello<br>
@@ -32,7 +32,7 @@ Use the `box-decoration-slice` and `box-decoration-clone` utilities to control w
       </div>
     </div>
     <div class="flex flex-col">
-      <p class="font-medium text-sm text-gray-500 font-mono mb-3">box-decoration-clone</p>
+      <p class="font-medium text-sm text-gray-500 font-mono mb-3 dark:text-gray-400">box-decoration-clone</p>
       <div class="text-5xl font-extrabold leading-none tracking-tight font-sans">
         <span class="box-decoration-clone text-white bg-gradient-to-r from-indigo-600 to-pink-500 leading-[3.5rem] px-2">
           Hello<br>
