--- a/src/pages/docs/invert.mdx
+++ b/src/pages/docs/invert.mdx
@@ -28,14 +28,14 @@ Use the `invert` and `invert-0` utilities to control whether an element should b
   <div class="flex justify-center sm:block overflow-scroll sm:overflow-visible scroll-p-8">
   <div class="flex items-center justify-around gap-6 sm:gap-4 font-mono font-bold shrink-0 p-8">
     <div class="flex flex-col items-center shrink-0">
-      <p class="font-medium text-sm text-gray-500 font-mono text-center mb-3">invert-0</p>
+      <p class="font-medium text-sm text-gray-500 font-mono text-center mb-3 dark:text-gray-400">invert-0</p>
       <div class="relative invert-0">
         <img class="w-24 h-24 object-cover rounded-lg shadow-xl" src="https://images.unsplash.com/photo-1554629947-334ff61d85dc?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=320&h=320&q=80" />
         <div class="absolute inset-0 ring-1 ring-inset ring-black/10 rounded-lg"></div>
       </div>
     </div>
     <div class="flex flex-col items-center shrink-0">
-      <p class="font-medium text-sm text-gray-500 font-mono text-center mb-3">invert</p>
+      <p class="font-medium text-sm text-gray-500 font-mono text-center mb-3 dark:text-gray-400">invert</p>
       <div class="relative invert">
         <img class="w-24 h-24 object-cover rounded-lg shadow-xl" src="https://images.unsplash.com/photo-1554629947-334ff61d85dc?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=320&h=320&q=80" />
         <div class="absolute inset-0 ring-1 ring-inset ring-black/10 rounded-lg"></div>
