--- a/src/pages/docs/list-style-type.mdx
+++ b/src/pages/docs/list-style-type.mdx
@@ -19,7 +19,7 @@ To create bulleted or numeric lists, use the `list-disc` and `list-decimal` util
 <Example>
   <div class="flex flex-col gap-8">
     <div>
-      <span class="font-medium text-sm text-gray-500 font-mono mb-3">list-disc</span>
+      <span class="font-medium text-sm text-gray-500 font-mono mb-3 dark:text-gray-400">list-disc</span>
       <ul class="list-disc list-inside text-normal text-gray-900 dark:text-gray-200">
         <li>Now this is a story all about how, my life got flipped turned upside down</li>
         <li>And I like to take a minute and sit right here</li>
@@ -27,7 +27,7 @@ To create bulleted or numeric lists, use the `list-disc` and `list-decimal` util
       </ul>
     </div>
     <div>
-      <span class="font-medium text-sm text-gray-500 font-mono mb-3">list-decimal</span>
+      <span class="font-medium text-sm text-gray-500 font-mono mb-3 dark:text-gray-400">list-decimal</span>
       <ul class="list-decimal list-inside text-normal text-gray-900 dark:text-gray-200">
         <li>Now this is a story all about how, my life got flipped turned upside down</li>
         <li>And I like to take a minute and sit right here</li>
@@ -35,7 +35,7 @@ To create bulleted or numeric lists, use the `list-disc` and `list-decimal` util
       </ul>
     </div>
     <div>
-      <span class="font-medium text-sm text-gray-500 font-mono mb-3">list-none</span>
+      <span class="font-medium text-sm text-gray-500 font-mono mb-3 dark:text-gray-400">list-none</span>
       <ul class="list-none list-inside text-normal text-gray-900 dark:text-gray-200">
         <li>Now this is a story all about how, my life got flipped turned upside down</li>
         <li>And I like to take a minute and sit right here</li>
