--- a/src/pages/docs/outline-width.mdx
+++ b/src/pages/docs/outline-width.mdx
@@ -19,15 +19,15 @@ Use the `outline-{width}` utilities to change the width of an element's outline.
 <Example>
   <div class="flex flex-col sm:flex-row items-center justify-center gap-8 sm:gap-16 font-bold text-white text-sm text-center">
     <div class="flex flex-col items-center shrink-0">
-      <p class="font-medium text-sm text-gray-500 font-mono text-center mb-3">outline-1</p>
+      <p class="font-medium text-sm text-gray-500 font-mono text-center mb-3 dark:text-gray-400">outline-1</p>
       <button class="px-4 py-2 font-semibold text-sm bg-white text-gray-700 border border-gray-300 rounded-md shadow-sm outline outline-1 outline-offset-2 outline-blue-500 dark:bg-gray-700 dark:text-gray-200 dark:border-transparent">Button A</button>
     </div>
     <div class="flex flex-col items-center shrink-0">
-      <p class="font-medium text-sm text-gray-500 font-mono text-center mb-3">outline-2</p>
+      <p class="font-medium text-sm text-gray-500 font-mono text-center mb-3 dark:text-gray-400">outline-2</p>
       <button class="px-4 py-2 font-semibold text-sm bg-white text-gray-700 border border-gray-300 rounded-md shadow-sm outline outline-2 outline-offset-2 outline-blue-500 dark:bg-gray-700 dark:text-gray-200 dark:border-transparent">Button B</button>
     </div>
     <div class="flex flex-col items-center shrink-0">
-      <p class="font-medium text-sm text-gray-500 font-mono text-center mb-3">outline-4</p>
+      <p class="font-medium text-sm text-gray-500 font-mono text-center mb-3 dark:text-gray-400">outline-4</p>
       <button class="px-4 py-2 font-semibold text-sm bg-white text-gray-700 border border-gray-300 rounded-md shadow-sm outline outline-4 outline-offset-2 outline-blue-500 dark:bg-gray-700 dark:text-gray-200 dark:border-transparent">Button C</button>
     </div>
   </div>
