--- a/src/pages/docs/pointer-events.mdx
+++ b/src/pages/docs/pointer-events.mdx
@@ -21,7 +21,7 @@ Use `pointer-events-none` to make an element ignore pointer events. The pointer 
 <Example hint="Try clicking the search icons to see the expected behaviour">
   <div class="grid grid-cols-1 sm:grid-cols-2 gap-10 px-0 sm:px-10 font-mono font-bold">
     <div class="flex flex-col">
-      <p class="font-medium text-sm text-gray-500 font-mono mb-3">pointer-events-auto</p>
+      <p class="font-medium text-sm text-gray-500 font-mono mb-3 dark:text-gray-400">pointer-events-auto</p>
       <div class="relative rounded-lg shadow-sm w-full">
         <div class="absolute inset-y-0 left-0 pl-3 flex items-center pointer-events-auto">
           <svg class="absolute text-gray-400 h-5 w-5" viewBox="0 0 20 20" fill="currentColor">
@@ -32,7 +32,7 @@ Use `pointer-events-none` to make an element ignore pointer events. The pointer 
       </div>
     </div>
     <div class="flex flex-col">
-      <p class="font-medium text-sm text-gray-500 font-mono mb-3">pointer-events-none</p>
+      <p class="font-medium text-sm text-gray-500 font-mono mb-3 dark:text-gray-400">pointer-events-none</p>
       <div class="relative rounded-lg shadow-sm w-full">
         <div class="absolute inset-y-0 left-0 pl-3 flex items-center pointer-events-none">
           <svg class="absolute text-gray-400 h-5 w-5" viewBox="0 0 20 20" fill="currentColor">
