--- a/src/pages/docs/ring-offset-color.mdx
+++ b/src/pages/docs/ring-offset-color.mdx
@@ -25,10 +25,10 @@ export const classes = {
 Use the `ring-offset-{color}` utilities to change the color of a ring offset. Usually this is done to try and match the offset to the parent background color, since true box-shadow offsets aren't actually possible in CSS.
 
 <Example>
-  <div class="grid place-content-center text-white text-sm text-center font-bold leading-6 text-white">
+  <div class="grid place-content-center text-white text-sm text-center font-bold leading-6">
     <div class="flex flex-col items-center shrink-0">
-      <p class="font-medium text-sm font-mono text-gray-500 text-center mb-3">ring-offset-purple-100</p>
-      <button class="px-4 py-2 font-semibold text-sm bg-white text-gray-700 border border-gray-300 rounded-md shadow-sm ring-2 ring-offset-4 ring-offset-purple-100 ring-purple-500">Save Changes</button>
+      <p class="font-medium text-sm font-mono text-gray-500 text-center mb-3 dark:text-gray-400">ring-offset-purple-100</p>
+      <button class="px-4 py-2 font-semibold text-sm bg-white text-gray-700 border border-gray-300 rounded-md shadow-sm ring-2 ring-offset-4 ring-offset-purple-100 ring-purple-500 dark:bg-gray-700 dark:text-gray-200 dark:border-transparent">Save Changes</button>
     </div>
   </div>
 </Example>
