--- a/src/pages/docs/ring-width.mdx
+++ b/src/pages/docs/ring-width.mdx
@@ -48,15 +48,15 @@ Use the `ring-{width}` utilities to apply solid box-shadow of a specific thickne
 <Example>
   <div class="grid grid-cols-1 sm:grid-cols-3 gap-4 text-white text-center font-bold leading-6">
     <div class="flex flex-col items-center shrink-0">
-      <p class="font-medium text-sm text-gray-500 font-mono text-center mb-3">ring-2</p>
+      <p class="font-medium text-sm text-gray-500 font-mono text-center mb-3 dark:text-gray-400">ring-2</p>
       <button class="px-4 py-2 font-semibold text-sm bg-white text-gray-700 border border-gray-300 rounded-md shadow-sm ring-2 ring-offset-2 ring-offset-gray-50 ring-blue-300 dark:bg-gray-700 dark:text-gray-200 dark:ring-offset-gray-900 dark:border-transparent">Button A</button>
     </div>
     <div class="flex flex-col items-center shrink-0">
-      <p class="font-medium text-sm text-gray-500 font-mono text-center mb-3">ring</p>
+      <p class="font-medium text-sm text-gray-500 font-mono text-center mb-3 dark:text-gray-400">ring</p>
         <button class="px-4 py-2 font-semibold text-sm bg-white text-gray-700 border border-gray-300 rounded-md shadow-sm ring ring-offset-2 ring-offset-gray-50 ring-blue-300 dark:bg-gray-700 dark:text-gray-200 dark:ring-offset-gray-900 dark:border-transparent">Button B</button>
     </div>
     <div class="flex flex-col items-center shrink-0">
-      <p class="font-medium text-sm text-gray-500 font-mono text-center mb-3">ring-4</p>
+      <p class="font-medium text-sm text-gray-500 font-mono text-center mb-3 dark:text-gray-400">ring-4</p>
       <button class="px-4 py-2 font-semibold text-sm bg-white text-gray-700 border border-gray-300 rounded-md shadow-sm ring-4 ring-offset-2 ring-offset-gray-50 ring-blue-300 dark:bg-gray-700 dark:text-gray-200 dark:ring-offset-gray-900 dark:border-transparent">Button C</button>
     </div>
   </div>
