--- a/src/pages/docs/transform-origin.mdx
+++ b/src/pages/docs/transform-origin.mdx
@@ -20,7 +20,7 @@ Specify an element's transform origin using the `origin-{keyword}` utilities.
   <div class="flex sm:block overflow-scroll sm:overflow-visible scroll-p-8">
   <div class="flex items-center justify-around gap-12 sm:gap-4 font-mono font-bold p-8 px-12 sm:px-8 pb-10 shrink-0">
     <div class="flex flex-col items-center shrink-0">
-      <p class="font-medium text-sm text-gray-500 font-mono text-center mb-9">origin-center</p>
+      <p class="font-medium text-sm text-gray-500 font-mono text-center mb-9 dark:text-gray-400">origin-center</p>
       <div class="relative">
         <div class="absolute inset-0">
           <img class="w-24 h-24 object-cover rounded-lg opacity-25" src="https://images.unsplash.com/photo-1554629947-334ff61d85dc?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=320&h=320&q=80" />
@@ -32,7 +32,7 @@ Specify an element's transform origin using the `origin-{keyword}` utilities.
       </div>
     </div>
     <div class="flex flex-col items-center shrink-0">
-      <p class="font-medium text-sm text-gray-500 font-mono text-center mb-9">origin-top-left</p>
+      <p class="font-medium text-sm text-gray-500 font-mono text-center mb-9 dark:text-gray-400">origin-top-left</p>
       <div class="relative">
         <div class="absolute inset-0">
           <img class="w-24 h-24 object-cover rounded-lg opacity-25" src="https://images.unsplash.com/photo-1554629947-334ff61d85dc?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=320&h=320&q=80" />
@@ -44,7 +44,7 @@ Specify an element's transform origin using the `origin-{keyword}` utilities.
       </div>
     </div>
     <div class="flex flex-col items-center shrink-0">
-      <p class="font-medium text-sm text-gray-500 font-mono text-center mb-9">origin-bottom</p>
+      <p class="font-medium text-sm text-gray-500 font-mono text-center mb-9 dark:text-gray-400">origin-bottom</p>
       <div class="relative">
         <div class="absolute inset-0">
           <img class="w-24 h-24 object-cover rounded-lg opacity-25" src="https://images.unsplash.com/photo-1554629947-334ff61d85dc?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=320&h=320&q=80" />
