--- a/src/pages/docs/backdrop-blur.mdx
+++ b/src/pages/docs/backdrop-blur.mdx
@@ -29,7 +29,7 @@ Use the `backdrop-blur-{amount?}` utilities to control an element’s backdrop b
   <div class="flex justify-start sm:block overflow-scroll sm:overflow-visible scroll-p-8">
   <div class="flex items-center justify-around gap-6 sm:gap-4 font-mono font-bold shrink-0 p-8">
     <div class="flex flex-col items-center shrink-0">
-      <p class="font-medium text-sm text-gray-500 font-mono text-center mb-3">backdrop-blur-sm</p>
+      <p class="font-medium text-sm text-gray-500 font-mono text-center mb-3 dark:text-gray-400">backdrop-blur-sm</p>
       <div class="relative">
         <div class="absolute inset-6 backdrop-blur-sm h-20 w-20 bg-white/30"></div>
         <img class="w-32 h-32 object-cover rounded-lg shadow-xl" src="https://images.unsplash.com/photo-1554629947-334ff61d85dc?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=320&h=320&q=80" />
@@ -37,7 +37,7 @@ Use the `backdrop-blur-{amount?}` utilities to control an element’s backdrop b
       </div>
     </div>
     <div class="flex flex-col items-center shrink-0">
-      <p class="font-medium text-sm text-gray-500 font-mono text-center mb-3">backdrop-blur-md</p>
+      <p class="font-medium text-sm text-gray-500 font-mono text-center mb-3 dark:text-gray-400">backdrop-blur-md</p>
       <div class="relative">
         <div class="absolute inset-6 backdrop-blur-md h-20 w-20 bg-white/30"></div>
         <img class="w-32 h-32 object-cover rounded-lg shadow-xl" src="https://images.unsplash.com/photo-1554629947-334ff61d85dc?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=320&h=320&q=80" />
@@ -45,7 +45,7 @@ Use the `backdrop-blur-{amount?}` utilities to control an element’s backdrop b
       </div>
     </div>
     <div class="flex flex-col items-center shrink-0">
-      <p class="font-medium text-sm text-gray-500 font-mono text-center mb-3">backdrop-blur-xl</p>
+      <p class="font-medium text-sm text-gray-500 font-mono text-center mb-3 dark:text-gray-400">backdrop-blur-xl</p>
       <div class="relative">
         <div class="absolute inset-6 backdrop-blur-xl h-20 w-20 bg-white/30"></div>
         <img class="w-32 h-32 object-cover rounded-lg shadow-xl" src="https://images.unsplash.com/photo-1554629947-334ff61d85dc?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=320&h=320&q=80" />
