--- a/src/pages/docs/border-color.mdx
+++ b/src/pages/docs/border-color.mdx
@@ -66,15 +66,15 @@ Control the opacity of an element's border color using the color opacity modifie
 <Example>
   <div class="grid lg:grid-cols-3 gap-4 text-white text-sm text-center font-bold leading-6">
     <div class="flex flex-col items-center shrink-0">
-      <p class="font-medium text-sm text-gray-500 font-mono text-center mb-3">border-indigo-500/100</p>
+      <p class="font-medium text-sm text-gray-500 font-mono text-center mb-3 dark:text-gray-400">border-indigo-500/100</p>
       <div class="p-4 shadow-sm bg-white dark:bg-gray-900 w-16 h-16 border-indigo-500/100 border-4"></div>
     </div>
     <div class="flex flex-col items-center shrink-0">
-      <p class="font-medium text-sm text-gray-500 font-mono text-center mb-3">border-indigo-500/75</p>
+      <p class="font-medium text-sm text-gray-500 font-mono text-center mb-3 dark:text-gray-400">border-indigo-500/75</p>
       <div class="p-4 shadow-sm bg-white dark:bg-gray-900 w-16 h-16 border-indigo-500/75 border-4"></div>
     </div>
     <div class="flex flex-col items-center shrink-0">
-      <p class="font-medium text-sm text-gray-500 font-mono text-center mb-3">border-indigo-500/50</p>
+      <p class="font-medium text-sm text-gray-500 font-mono text-center mb-3 dark:text-gray-400">border-indigo-500/50</p>
       <div class="p-4 shadow-sm bg-white dark:bg-gray-900 w-16 h-16 border-indigo-500/50 border-4"></div>
     </div>
   </div>
@@ -99,19 +99,19 @@ Use the `border-{side}-{color}` utilities to set the border color for one side o
 <Example>
   <div class="flex flex-col sm:flex-row items-center justify-around gap-4 text-white text-sm text-center font-bold leading-6">
     <div class="flex flex-col items-center shrink-0">
-      <p class="font-medium text-sm text-gray-500 font-mono text-center mb-3">border-t-indigo-500</p>
+      <p class="font-medium text-sm text-gray-500 font-mono text-center mb-3 dark:text-gray-400">border-t-indigo-500</p>
       <div class="p-4 shadow-sm bg-white dark:bg-gray-900 ring-1 ring-gray-900/5 w-16 h-16 border-indigo-200 dark:border-indigo-600/20 border-4 border-t-indigo-500 dark:border-t-indigo-500"></div>
     </div>
     <div class="flex flex-col items-center shrink-0">
-      <p class="font-medium text-sm text-gray-500 font-mono text-center mb-3">border-r-indigo-500</p>
+      <p class="font-medium text-sm text-gray-500 font-mono text-center mb-3 dark:text-gray-400">border-r-indigo-500</p>
       <div class="p-4 shadow-sm bg-white dark:bg-gray-900 ring-1 ring-gray-900/5 w-16 h-16 border-indigo-200 dark:border-indigo-600/20 border-4 border-r-indigo-500 dark:border-r-indigo-500"></div>
     </div>
     <div class="flex flex-col items-center shrink-0">
-      <p class="font-medium text-sm text-gray-500 font-mono text-center mb-3">border-b-indigo-500</p>
+      <p class="font-medium text-sm text-gray-500 font-mono text-center mb-3 dark:text-gray-400">border-b-indigo-500</p>
       <div class="p-4 shadow-sm bg-white dark:bg-gray-900 ring-1 ring-gray-900/5 w-16 h-16 border-indigo-200 dark:border-indigo-600/20 border-4 border-b-indigo-500 dark:border-b-indigo-500"></div>
     </div>
     <div class="flex flex-col items-center shrink-0">
-      <p class="font-medium text-sm text-gray-500 font-mono text-center mb-3">border-l-indigo-500</p>
+      <p class="font-medium text-sm text-gray-500 font-mono text-center mb-3 dark:text-gray-400">border-l-indigo-500</p>
       <div class="p-4 shadow-sm bg-white dark:bg-gray-900 ring-1 ring-gray-900/5 w-16 h-16 border-indigo-200 dark:border-indigo-600/20 border-4 border-l-indigo-500 dark:border-l-indigo-500"></div>
     </div>
   </div>
@@ -131,11 +131,11 @@ Use the `border-{x|y}-{color}` utilities to set the border color on two sides of
 <Example>
   <div class="flex flex-col sm:flex-row items-center justify-around gap-4 text-white text-sm text-center font-bold leading-6">
     <div class="flex flex-col items-center shrink-0">
-      <p class="font-medium text-sm text-gray-500 font-mono text-center mb-3">border-x-indigo-500</p>
+      <p class="font-medium text-sm text-gray-500 font-mono text-center mb-3 dark:text-gray-400">border-x-indigo-500</p>
       <div class="p-4 shadow-sm bg-white dark:bg-gray-900 ring-1 ring-gray-900/5 w-16 h-16 border-indigo-200 dark:border-indigo-600/20 border-4 border-x-indigo-500 dark:border-x-indigo-500"></div>
     </div>
     <div class="flex flex-col items-center shrink-0">
-      <p class="font-medium text-sm text-gray-500 font-mono text-center mb-3">border-y-indigo-500</p>
+      <p class="font-medium text-sm text-gray-500 font-mono text-center mb-3 dark:text-gray-400">border-y-indigo-500</p>
       <div class="p-4 shadow-sm bg-white dark:bg-gray-900 ring-1 ring-gray-900/5 w-16 h-16 border-indigo-200 dark:border-indigo-600/20 border-4 border-y-indigo-500 dark:border-y-indigo-500"></div>
     </div>
   </div>
