--- a/src/pages/docs/border-style.mdx
+++ b/src/pages/docs/border-style.mdx
@@ -18,19 +18,19 @@ Use `border-{style}` to control an element's border style.
 <Example>
   <div class="flex flex-col sm:flex-row items-center justify-around gap-4 text-white text-sm text-center font-bold leading-6">
     <div class="flex flex-col items-center shrink-0">
-      <p class="font-medium text-sm text-gray-500 font-mono text-center mb-3">border-solid</p>
+      <p class="font-medium text-sm text-gray-500 font-mono text-center mb-3 dark:text-gray-400">border-solid</p>
       <button class="px-4 py-2 font-semibold text-sm bg-white text-gray-700 dark:bg-gray-700 dark:text-white rounded-md shadow-sm ring-1 ring-gray-900/5 border-indigo-500 dark:border-light-blue-500 border-2 border-solid">Button A</button>
     </div>
     <div class="flex flex-col items-center shrink-0">
-      <p class="font-medium text-sm text-gray-500 font-mono text-center mb-3">border-dashed</p>
+      <p class="font-medium text-sm text-gray-500 font-mono text-center mb-3 dark:text-gray-400">border-dashed</p>
       <button class="px-4 py-2 font-semibold text-sm bg-white text-gray-700 dark:bg-gray-700 dark:text-white rounded-md shadow-sm ring-1 ring-gray-900/5 border-indigo-500 dark:border-light-blue-500 border-2 border-dashed">Button A</button>
     </div>
     <div class="flex flex-col items-center shrink-0">
-      <p class="font-medium text-sm text-gray-500 font-mono text-center mb-3">border-dotted</p>
+      <p class="font-medium text-sm text-gray-500 font-mono text-center mb-3 dark:text-gray-400">border-dotted</p>
       <button class="px-4 py-2 font-semibold text-sm bg-white text-gray-700 dark:bg-gray-700 dark:text-white rounded-md shadow-sm ring-1 ring-gray-900/5 border-indigo-500 dark:border-light-blue-500 border-2 border-dotted">Button A</button>
     </div>
     <div class="flex flex-col items-center shrink-0">
-      <p class="font-medium text-sm text-gray-500 font-mono text-center mb-3">border-double</p>
+      <p class="font-medium text-sm text-gray-500 font-mono text-center mb-3 dark:text-gray-400">border-double</p>
       <button class="px-4 py-2 font-semibold text-sm bg-white text-gray-700 dark:bg-gray-700 dark:text-white rounded-md shadow-sm ring-1 ring-gray-900/5 border-indigo-500 dark:border-light-blue-500 border-4 border-double">Button A</button>
     </div>
   </div>
