--- a/src/pages/docs/border-width.mdx
+++ b/src/pages/docs/border-width.mdx
@@ -19,19 +19,19 @@ Use the `border`, `.border-0`, `.border-2`, `.border-4`, or `.border-8` utilitie
 <Example>
   <div class="flex flex-col sm:flex-row items-center justify-around gap-4 text-white text-sm text-center font-bold leading-6">
     <div class="flex flex-col items-center shrink-0">
-      <p class="font-medium text-sm text-gray-500 font-mono text-center mb-3">border</p>
+      <p class="font-medium text-sm text-gray-500 font-mono text-center mb-3 dark:text-gray-400">border</p>
       <div class="p-4 shadow-sm bg-white dark:bg-gray-900 w-16 h-16 border-indigo-600 dark:border-sky-500 border"></div>
     </div>
     <div class="flex flex-col items-center shrink-0">
-      <p class="font-medium text-sm text-gray-500 font-mono text-center mb-3">border-2</p>
+      <p class="font-medium text-sm text-gray-500 font-mono text-center mb-3 dark:text-gray-400">border-2</p>
       <div class="p-4 shadow-sm bg-white dark:bg-gray-900 w-16 h-16 border-indigo-600 dark:border-sky-500 border-2"></div>
     </div>
     <div class="flex flex-col items-center shrink-0">
-      <p class="font-medium text-sm text-gray-500 font-mono text-center mb-3">border-4</p>
+      <p class="font-medium text-sm text-gray-500 font-mono text-center mb-3 dark:text-gray-400">border-4</p>
       <div class="p-4 shadow-sm bg-white dark:bg-gray-900 w-16 h-16 border-indigo-600 dark:border-sky-500 border-4"></div>
     </div>
     <div class="flex flex-col items-center shrink-0">
-      <p class="font-medium text-sm text-gray-500 font-mono text-center mb-3">border-8</p>
+      <p class="font-medium text-sm text-gray-500 font-mono text-center mb-3 dark:text-gray-400">border-8</p>
       <div class="p-4 shadow-sm bg-white dark:bg-gray-900 w-16 h-16 border-indigo-600 dark:border-sky-500 border-8"></div>
     </div>
   </div>
@@ -51,19 +51,19 @@ Use the `border-{side}`, `.border-{side}-0`, `.border-{side}-2`, `.border-{side}
 <Example>
   <div class="flex flex-col sm:flex-row items-center justify-around gap-4 text-white text-sm text-center font-bold leading-6">
     <div class="flex flex-col items-center shrink-0">
-      <p class="font-medium text-sm text-gray-500 font-mono text-center mb-3">border-t-4</p>
+      <p class="font-medium text-sm text-gray-500 font-mono text-center mb-3 dark:text-gray-400">border-t-4</p>
       <div class="p-4 shadow-sm bg-white dark:bg-gray-900 ring-1 ring-gray-900/5 dark:ring-white/10 w-16 h-16 border-indigo-500 border-t-4"></div>
     </div>
     <div class="flex flex-col items-center shrink-0">
-      <p class="font-medium text-sm text-gray-500 font-mono text-center mb-3">border-r-4</p>
+      <p class="font-medium text-sm text-gray-500 font-mono text-center mb-3 dark:text-gray-400">border-r-4</p>
       <div class="p-4 shadow-sm bg-white dark:bg-gray-900 ring-1 ring-gray-900/5 dark:ring-white/10 w-16 h-16 border-indigo-500 border-r-4"></div>
     </div>
     <div class="flex flex-col items-center shrink-0">
-      <p class="font-medium text-sm text-gray-500 font-mono text-center mb-3">border-b-4</p>
+      <p class="font-medium text-sm text-gray-500 font-mono text-center mb-3 dark:text-gray-400">border-b-4</p>
       <div class="p-4 shadow-sm bg-white dark:bg-gray-900 ring-1 ring-gray-900/5 dark:ring-white/10 w-16 h-16 border-indigo-500 border-b-4"></div>
     </div>
     <div class="flex flex-col items-center shrink-0">
-      <p class="font-medium text-sm text-gray-500 font-mono text-center mb-3">border-l-4</p>
+      <p class="font-medium text-sm text-gray-500 font-mono text-center mb-3 dark:text-gray-400">border-l-4</p>
       <div class="p-4 shadow-sm bg-white dark:bg-gray-900 ring-1 ring-gray-900/5 dark:ring-white/10 w-16 h-16 border-indigo-500 border-l-4"></div>
     </div>
   </div>
@@ -83,11 +83,11 @@ Use the `border-{x|y}-{width}` utilities to set the border width on two sides of
 <Example>
   <div class="flex flex-col sm:flex-row items-center justify-around gap-4 text-white text-sm text-center font-bold leading-6">
     <div class="flex flex-col items-center shrink-0">
-      <p class="font-medium text-sm text-gray-500 font-mono text-center mb-3">border-x-4</p>
+      <p class="font-medium text-sm text-gray-500 font-mono text-center mb-3 dark:text-gray-400">border-x-4</p>
       <div class="p-4 shadow-sm bg-white dark:bg-gray-900 ring-1 ring-gray-900/5 dark:ring-white/10 w-16 h-16 border-indigo-500 border-x-4"></div>
     </div>
     <div class="flex flex-col items-center shrink-0">
-      <p class="font-medium text-sm text-gray-500 font-mono text-center mb-3">border-y-4</p>
+      <p class="font-medium text-sm text-gray-500 font-mono text-center mb-3 dark:text-gray-400">border-y-4</p>
       <div class="p-4 shadow-sm bg-white dark:bg-gray-900 ring-1 ring-gray-900/5 dark:ring-white/10 w-16 h-16 border-indigo-500 border-y-4"></div>
     </div>
   </div>
