--- a/src/pages/docs/font-family.mdx
+++ b/src/pages/docs/font-family.mdx
@@ -19,19 +19,19 @@ You can control the typeface of text using the font family utilities.
 <Example>
   <div class="flex flex-col gap-8">
     <div>
-      <span class="font-medium text-sm text-gray-500 font-mono mb-3">font-sans</span>
+      <span class="font-medium text-sm text-gray-500 font-mono mb-3 dark:text-gray-400">font-sans</span>
       <p class="font-sans text-lg font-medium text-gray-900 dark:text-gray-200">
         The quick brown fox jumps over the lazy dog.
       </p>
     </div>
     <div>
-      <span class="font-medium text-sm text-gray-500 font-mono mb-3">font-serif</span>
+      <span class="font-medium text-sm text-gray-500 font-mono mb-3 dark:text-gray-400">font-serif</span>
       <p class="font-serif text-lg font-medium text-gray-900 dark:text-gray-200">
         The quick brown fox jumps over the lazy dog.
       </p>
     </div>
     <div>
-      <span class="font-medium text-sm text-gray-500 font-mono mb-3">font-mono</span>
+      <span class="font-medium text-sm text-gray-500 font-mono mb-3 dark:text-gray-400">font-mono</span>
       <p class="font-mono text-lg font-medium text-gray-900 dark:text-gray-200">
         The quick brown fox jumps over the lazy dog.
       </p>
