--- a/src/pages/docs/list-style-position.mdx
+++ b/src/pages/docs/list-style-position.mdx
@@ -19,7 +19,7 @@ Control the position of the markers and text indentation in a list using the `li
   <div class="flex flex-col sm:flex-row gap-8">
     <div class="relative">
       <div class="absolute left-8 -top-8 -bottom-8 w-px bg-pink-400/40 dark:bg-rose-400/20"></div>
-      <p class="font-medium text-sm text-gray-500 font-mono mb-3 ml-8">list-inside</p>
+      <p class="font-medium text-sm text-gray-500 font-mono mb-3 ml-8 dark:text-gray-400">list-inside</p>
       <ul class="list-disc list-inside text-normal text-gray-700 bg-white rounded-xl shadow-lg ring-1 ring-gray-900/5 p-4 pl-8 dark:bg-gray-800 dark:ring-0 dark:highlight-white/5 dark:text-gray-400">
         <li>5 cups chopped Porcini mushrooms</li>
         <li>1/2 cup of olive oil</li>
@@ -28,7 +28,7 @@ Control the position of the markers and text indentation in a list using the `li
     </div>
     <div class="relative">
       <div class="absolute left-8 -top-0 sm:-top-8 -bottom-8 w-px bg-pink-400/40 dark:bg-rose-400/20"></div>
-      <p class="font-medium text-sm text-gray-500 font-mono mb-3 ml-8">list-outside</p>
+      <p class="font-medium text-sm text-gray-500 font-mono mb-3 ml-8 dark:text-gray-400">list-outside</p>
       <ul class="list-disc list-outside text-normal text-gray-700 bg-white rounded-xl shadow-lg ring-1 ring-gray-900/5 p-4 pl-8 dark:bg-gray-800 dark:ring-0 dark:highlight-white/5 dark:text-gray-400">
         <li>5 cups chopped Porcini mushrooms</li>
         <li>1/2 cup of olive oil</li>
