--- a/src/pages/docs/outline-style.mdx
+++ b/src/pages/docs/outline-style.mdx
@@ -19,19 +19,19 @@ Use the `outline-{style}` utilities to change the style of an element's outline.
 <Example>
   <div class="grid grid-cols-2 sm:grid-cols-4 gap-6 text-white text-sm font-semibold text-center">
     <div class="flex flex-col items-center shrink-0">
-      <p class="font-medium text-sm text-gray-500 font-mono text-center mb-3">outline</p>
+      <p class="font-medium text-sm text-gray-500 font-mono text-center mb-3 dark:text-gray-400">outline</p>
       <button class="px-4 py-2 font-semibold text-sm bg-white text-gray-700 border border-gray-300 rounded-md shadow-sm outline outline-2 outline-offset-2 outline-indigo-500 dark:bg-gray-700 dark:text-gray-200 dark:border-transparent">Button A</button>
     </div>
     <div class="flex flex-col items-center shrink-0">
-      <p class="font-medium text-sm text-gray-500 font-mono text-center mb-3">outline-dashed</p>
+      <p class="font-medium text-sm text-gray-500 font-mono text-center mb-3 dark:text-gray-400">outline-dashed</p>
       <button class="px-4 py-2 font-semibold text-sm bg-white text-gray-700 border border-gray-300 rounded-md shadow-sm outline-dashed outline-2 outline-offset-2 outline-indigo-500 dark:bg-gray-700 dark:text-gray-200 dark:border-transparent">Button B</button>
     </div>
     <div class="flex flex-col items-center shrink-0">
-      <p class="font-medium text-sm text-gray-500 font-mono text-center mb-3">outline-dotted</p>
+      <p class="font-medium text-sm text-gray-500 font-mono text-center mb-3 dark:text-gray-400">outline-dotted</p>
       <button class="px-4 py-2 font-semibold text-sm bg-white text-gray-700 border border-gray-300 rounded-md shadow-sm outline-dotted outline-2 outline-offset-2 outline-indigo-500 dark:bg-gray-700 dark:text-gray-200 dark:border-transparent">Button C</button>
     </div>
     <div class="flex flex-col items-center shrink-0">
-      <p class="font-medium text-sm text-gray-500 font-mono text-center mb-3">outline-double</p>
+      <p class="font-medium text-sm text-gray-500 font-mono text-center mb-3 dark:text-gray-400">outline-double</p>
       <button class="px-4 py-2 font-semibold text-sm bg-white text-gray-700 border border-gray-300 rounded-md shadow-sm outline-double outline-3 outline-offset-2 outline-indigo-500 dark:bg-gray-700 dark:text-gray-200 dark:border-transparent">Button D</button>
     </div>
   </div>
