--- a/src/pages/docs/ring-offset-width.mdx
+++ b/src/pages/docs/ring-offset-width.mdx
@@ -24,18 +24,18 @@ export const classes = {
 Use the `ring-offset-{width}` utilities to simulate an offset by adding solid white box-shadow and increasing the thickness of the accompanying outline ring to accommodate the offset.
 
 <Example>
-  <div class="grid grid-cols-1 sm:grid-cols-3 gap-4 text-white text-sm text-center font-bold leading-6 text-white">
+  <div class="grid grid-cols-1 sm:grid-cols-3 gap-4 text-white text-sm text-center font-bold leading-6">
     <div class="flex flex-col items-center shrink-0">
-      <p class="font-medium text-sm font-mono text-gray-500 text-center mb-3">ring-offset-0</p>
-      <button class="px-4 py-2 font-semibold text-sm bg-white text-gray-700 border border-gray-300 rounded-md shadow-sm ring-2 ring-offset-gray-50 ring-pink-500 ring-offset-0">Button A</button>
+      <p class="font-medium text-sm font-mono text-gray-500 text-center mb-3 dark:text-gray-400">ring-offset-0</p>
+      <button class="px-4 py-2 font-semibold text-sm bg-white text-gray-700 border border-gray-300 rounded-md shadow-sm ring-2 ring-offset-gray-50 ring-pink-500 ring-offset-0 dark:bg-gray-700 dark:text-gray-200 dark:border-transparent dark:ring-offset-gray-900">Button A</button>
     </div>
     <div class="flex flex-col items-center shrink-0">
-      <p class="font-medium text-sm font-mono text-gray-500 text-center mb-3">ring-offset-2</p>
-      <button class="px-4 py-2 font-semibold text-sm bg-white text-gray-700 border border-gray-300 rounded-md shadow-sm ring-2 ring-offset-gray-50 ring-pink-500 ring-offset-2">Button B</button>
+      <p class="font-medium text-sm font-mono text-gray-500 text-center mb-3 dark:text-gray-400">ring-offset-2</p>
+      <button class="px-4 py-2 font-semibold text-sm bg-white text-gray-700 border border-gray-300 rounded-md shadow-sm ring-2 ring-offset-gray-50 ring-pink-500 ring-offset-2 dark:bg-gray-700 dark:text-gray-200 dark:border-transparent dark:ring-offset-gray-900">Button B</button>
     </div>
     <div class="flex flex-col items-center shrink-0">
-      <p class="font-medium text-sm font-mono text-gray-500 text-center mb-3">ring-offset-4</p>
-      <button class="px-4 py-2 font-semibold text-sm bg-white text-gray-700 border border-gray-300 rounded-md shadow-sm ring-2 ring-offset-gray-50 ring-pink-500 ring-offset-4">Button C</button>
+      <p class="font-medium text-sm font-mono text-gray-500 text-center mb-3 dark:text-gray-400">ring-offset-4</p>
+      <button class="px-4 py-2 font-semibold text-sm bg-white text-gray-700 border border-gray-300 rounded-md shadow-sm ring-2 ring-offset-gray-50 ring-pink-500 ring-offset-4 dark:bg-gray-700 dark:text-gray-200 dark:border-transparent dark:ring-offset-gray-900">Button C</button>
     </div>
   </div>
 </Example>
@@ -51,10 +51,10 @@ Use the `ring-offset-{width}` utilities to simulate an offset by adding solid wh
 You can't actually offset a box-shadow in CSS, so we have to fake it using a solid color shadow that matches the parent background color. We use white by default, but if you are adding a ring offset over a different background color, you should use the `ring-offset-{color}` utilities to match the parent background color:
 
 <Example>
-  <div class="grid place-content-center text-white text-sm text-center font-bold leading-6 text-white">
+  <div class="grid place-content-center text-white text-sm text-center font-bold leading-6">
     <div class="flex flex-col items-center shrink-0">
-      <p class="font-medium text-sm font-mono text-gray-500 text-center mb-3">ring-offset-pink-500</p>
-      <button class="px-4 py-2 font-semibold text-sm bg-white text-gray-700 border border-gray-300 rounded-md shadow-sm ring-2 ring-offset-4 ring-offset-pink-100 ring-pink-500">Save Changes</button>
+      <p class="font-medium text-sm font-mono text-gray-500 text-center mb-3 dark:text-gray-400">ring-offset-pink-500</p>
+      <button class="px-4 py-2 font-semibold text-sm bg-white text-gray-700 border border-gray-300 rounded-md shadow-sm ring-2 ring-offset-4 ring-offset-pink-100 ring-pink-500 dark:bg-gray-700 dark:text-gray-200 dark:border-transparent">Save Changes</button>
     </div>
   </div>
 </Example>
