--- a/src/pages/docs/text-decoration-style.mdx
+++ b/src/pages/docs/text-decoration-style.mdx
@@ -19,23 +19,23 @@ Use the `decoration-{style}` utilities to change the style of an element's [text
 <Example>
   <div class="flex flex-col gap-8 text-gray-900 dark:text-gray-200">
     <div>
-      <div class="font-medium text-sm text-gray-500 font-mono mb-3">decoration-solid</div>
+      <div class="font-medium text-sm text-gray-500 font-mono mb-3 dark:text-gray-400">decoration-solid</div>
       <p class="text-lg font-medium underline decoration-solid">The quick brown fox jumps over the lazy dog.</p>
     </div>
     <div>
-      <div class="font-medium text-sm text-gray-500 font-mono mb-3">decoration-double</div>
+      <div class="font-medium text-sm text-gray-500 font-mono mb-3 dark:text-gray-400">decoration-double</div>
       <p class="text-lg font-medium underline decoration-double">The quick brown fox jumps over the lazy dog.</p>
     </div>
     <div>
-      <div class="font-medium text-sm text-gray-500 font-mono mb-3">decoration-dotted</div>
+      <div class="font-medium text-sm text-gray-500 font-mono mb-3 dark:text-gray-400">decoration-dotted</div>
       <p class="text-lg font-medium underline decoration-dotted">The quick brown fox jumps over the lazy dog.</p>
     </div>
     <div>
-      <div class="font-medium text-sm text-gray-500 font-mono mb-3">decoration-dashed</div>
+      <div class="font-medium text-sm text-gray-500 font-mono mb-3 dark:text-gray-400">decoration-dashed</div>
       <p class="text-lg font-medium underline decoration-dashed">The quick brown fox jumps over the lazy dog.</p>
     </div>
     <div>
-      <div class="font-medium text-sm text-gray-500 font-mono mb-3">decoration-wavy</div>
+      <div class="font-medium text-sm text-gray-500 font-mono mb-3 dark:text-gray-400">decoration-wavy</div>
       <p class="text-lg font-medium underline decoration-wavy">The quick brown fox jumps over the lazy dog.</p>
     </div>
   </div>
