--- a/src/pages/docs/text-decoration-thickness.mdx
+++ b/src/pages/docs/text-decoration-thickness.mdx
@@ -23,15 +23,15 @@ Use the `decoration-{width}` utilities to change the thickness of an element's [
 <Example>
   <div class="flex flex-col gap-8 text-gray-900 dark:text-gray-200">
     <div>
-      <div class="font-medium text-sm text-gray-500 font-mono mb-3">decoration-1</div>
+      <div class="font-medium text-sm text-gray-500 font-mono mb-3 dark:text-gray-400">decoration-1</div>
       <p class="text-lg font-medium underline decoration-1">The quick brown fox jumps over the lazy dog.</p>
     </div>
     <div>
-      <div class="font-medium text-sm text-gray-500 font-mono mb-3">decoration-2</div>
+      <div class="font-medium text-sm text-gray-500 font-mono mb-3 dark:text-gray-400">decoration-2</div>
       <p class="text-lg font-medium underline decoration-2">The quick brown fox jumps over the lazy dog.</p>
     </div>
     <div>
-      <div class="font-medium text-sm text-gray-500 font-mono mb-3">decoration-4</div>
+      <div class="font-medium text-sm text-gray-500 font-mono mb-3 dark:text-gray-400">decoration-4</div>
       <p class="text-lg font-medium underline decoration-4">The quick brown fox jumps over the lazy dog.</p>
     </div>
   </div>
