--- a/src/pages/docs/text-decoration.mdx
+++ b/src/pages/docs/text-decoration.mdx
@@ -18,25 +18,25 @@ Control how text is decorated with the `underline`, `no-underline`, and `line-th
 <Example>
   <div class="flex flex-col gap-8">
     <div>
-      <span class="font-medium text-sm text-gray-500 font-mono mb-3">underline</span>
+      <span class="font-medium text-sm text-gray-500 font-mono mb-3 dark:text-gray-400">underline</span>
       <p class="underline text-lg font-medium text-gray-900 dark:text-gray-200">
         The quick brown fox jumps over the lazy dog.
       </p>
     </div>
     <div>
-      <span class="font-medium text-sm text-gray-500 font-mono mb-3">overline</span>
+      <span class="font-medium text-sm text-gray-500 font-mono mb-3 dark:text-gray-400">overline</span>
       <p class="overline text-lg font-medium text-gray-900 dark:text-gray-200">
         The quick brown fox jumps over the lazy dog.
       </p>
     </div>
     <div>
-      <span class="font-medium text-sm text-gray-500 font-mono mb-3">line-through</span>
+      <span class="font-medium text-sm text-gray-500 font-mono mb-3 dark:text-gray-400">line-through</span>
       <p class="line-through text-lg font-medium text-gray-900 dark:text-gray-200">
         The quick brown fox jumps over the lazy dog.
       </p>
     </div>
     <div>
-      <span class="font-medium text-sm text-gray-500 font-mono mb-3">no-underline</span>
+      <span class="font-medium text-sm text-gray-500 font-mono mb-3 dark:text-gray-400">no-underline</span>
       <p class="text-lg font-medium text-gray-900 dark:text-gray-200">
         The quick brown fox jumps over the lazy dog.
       </p>
