--- a/src/pages/docs/text-transform.mdx
+++ b/src/pages/docs/text-transform.mdx
@@ -18,25 +18,25 @@ The `uppercase` and `lowercase` will uppercase and lowercase text respectively, 
 <Example>
   <div class="flex flex-col gap-8">
     <div>
-      <span class="font-medium text-sm text-gray-500 font-mono mb-3">normal-case</span>
+      <span class="font-medium text-sm text-gray-500 font-mono mb-3 dark:text-gray-400">normal-case</span>
       <p class="normal-case text-lg font-medium text-gray-900 dark:text-gray-200">
         The quick brown fox jumps over the lazy dog.
       </p>
     </div>
     <div>
-      <span class="font-medium text-sm text-gray-500 font-mono mb-3">uppercase</span>
+      <span class="font-medium text-sm text-gray-500 font-mono mb-3 dark:text-gray-400">uppercase</span>
       <p class="uppercase text-lg font-medium text-gray-900 dark:text-gray-200">
         The quick brown fox jumps over the lazy dog.
       </p>
     </div>
     <div>
-      <span class="font-medium text-sm text-gray-500 font-mono mb-3">lowercase</span>
+      <span class="font-medium text-sm text-gray-500 font-mono mb-3 dark:text-gray-400">lowercase</span>
       <p class="lowercase text-lg font-medium text-gray-900 dark:text-gray-200">
         The quick brown fox jumps over the lazy dog.
       </p>
     </div>
     <div>
-      <span class="font-medium text-sm text-gray-500 font-mono mb-3">capitalize</span>
+      <span class="font-medium text-sm text-gray-500 font-mono mb-3 dark:text-gray-400">capitalize</span>
       <p class="capitalize text-lg font-medium text-gray-900 dark:text-gray-200">
         The quick brown fox jumps over the lazy dog.
       </p>
